# Hantek-DSO2xxx-Controller

./: .gitignore  CLAUDE.md  CONTEXT.md  Hantek DSO2D15 Control (standalone).html  LICENSE  README.md  Run-Hantek-DSO2D15.bat  pyproject.toml
design/design_handoff_dso2d15_ui/: Hantek DSO2D15 Control.dc.html  README.md
docs/: scpi-command-reference.md  ui-claude-design-prompt.md
hantek_dso2d15/: app.py  measure_stats.py
hantek_dso2d15/engine/: __init__.py  controller.py  states.py  sweep.py  worker.py
hantek_dso2d15/gui/: __init__.py  accordion.py  cursor_overlay.py  decode_overlay.py  main_window.py  plot_widget.py  scpi_terminal.py  segmented.py  theme.py  waveform_tiles.py  widgets.py
hantek_dso2d15/io/: __init__.py  export.py  presets.py
hantek_dso2d15/scpi/: __init__.py  acquire.py  channel.py  dds.py  measure.py  scope.py  timebase.py  trigger.py  validation.py
hantek_dso2d15/transport/: __init__.py  base.py  fake_transport.py  scpi_log.py  visa_transport.py
hantek_dso2d15/waveform/: __init__.py  convert.py  decode.py  decode_i2c.py  decode_spi.py  decode_uart.py  display_window.py  header.py  math_compute.py  packet.py  reader.py
scripts/: hw_smoke_engine.py  hw_smoke_foundation.py  hw_smoke_waveform.py
tests/: conftest.py  test_measure_stats.py  test_smoke.py
tests/engine/: test_controller.py  test_states.py  test_sweep.py  test_worker.py
tests/gui/: test_accordion.py  test_acquire_panel.py  test_cursors.py  test_decode_overlay.py  test_decode_panel.py  test_display_panel.py  test_generator_panel.py  test_horizontal_panel.py  (+8 more)
(+44 files in other folders)
